# auv_ros_ws

./: .gitignore  README.md
src/luxonis_task_q1/: CMakeLists.txt  README.md  package.xml
src/luxonis_task_q1/scripts/: camout.py
src/luxonis_task_q2/: CMakeLists.txt  README.md  luxonis_task_q2_methodology.md  package.xml
src/luxonis_task_q2/scripts/: camera_node.py  camera_subscriber.py
src/task0_q1/: CMakeLists.txt  README.md  package.xml  task0_q1_methodology.md
src/task0_q1/scripts/: chatv1.py  finalchat.py
src/task0_q2/: CMakeLists.txt  README.md  package.xml  task0_q2_methodology
src/task0_q2/scripts/: pub1.py  sub1_pub2.py  sub2.py
src/task0_q3/: CMakeLists.txt  README.md  package.xml  task0_q3_methodology.md
src/task0_q3/scripts/: publisher.py  subscriber.py
