<?xml version="1.0"?>
<package format="2">
  <name>task0_q1</name>
  <version>0.0.0</version>
  <description>The task0_q1 package</description>
  <maintainer email="mahalis.rayhan@gmail.com">Mahalis Rayhan</maintainer>
  <license>TODO</license>
  <author email="mahalis.rayhan@gmail.com">Mahalis Rayhan</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
